Add upload/get photo features and login errors handle
