# service/api/api-handler.go
@@ -8,7 +8,8 @@ import (
 func (rt *_router) Handler() http.Handler {
 	// Register routes
 	rt.router.POST("/session", rt.doLogin)
-	//rt.router.PUT("/profiles/:auth_user_id/name", rt.setMyUserName)
+	rt.router.POST("/profiles/:user_id/photos", rt.uploadPhoto)
+	rt.router.GET("/profiles/:user_id/photos/:photo_id", rt.getImage)
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
 
